@@ -4,7 +4,8 @@ What's hot:
 -----------
 * New themes
   elite - from the BashPrompt-4.5b6 package, now with UTF-8 and a bit more spiffiness
-  uberprompt - simplicity is king!
+  elite2 - also from BashPrompt-4.5b6
+  uberprompt - simple and stylish prompt
 
 * Set the theme color at load, eg:
 
